syntax = "proto3";

package golem.component;

import "golem/common/uuid.proto";
import "golem/component/plugin_registration.proto";

message EnvironmentPluginGrantId {
  golem.common.UUID value = 1;
}

message PluginInstallation {
  PluginRegistrationId plugin_registration_id = 1;
  int32 priority = 2;
  map<string, string> parameters = 3;
}
